Correction nombre de photos version mobile

--- a/src/styles/carrousel.css
+++ b/src/styles/carrousel.css
@@ -101,7 +101,6 @@
     }
 
     .bulletPoints{
-        top: 80%;
-        font-size: 20px;
+        display: none;
     }
 }
